Introduction of new LootRule system